chore: update docs and fix minor issues
