# server/interfaces/http/server.go
@@ -96,7 +96,7 @@ func ServeHttp() error {
 		cors.Config{
 			AllowOrigins:     "http://localhost:3000,https://gopie.factly.dev,https://*.factly.dev",
 			AllowMethods:     "GET,POST,HEAD,PUT,DELETE,PATCH,OPTIONS",
-			AllowHeaders:     "Origin, Content-Type, Accept, Authorization, X-Requested-With, X-CSRF-Token",
+			AllowHeaders:     "Origin, Content-Type, Accept, Authorization, X-Requested-With, X-CSRF-Token, userID, x-user-id, x-project-ids, x-dataset-ids, x-chat-id",
 			AllowCredentials: true,
 			MaxAge:           86400,
 		},
